--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1623,9 +1623,11 @@ grd_files_debug_sources = [
   "front_end/panels/sensors/SensorsView.js",
   "front_end/panels/sensors/locationsSettingsTab.css.js",
   "front_end/panels/sensors/sensors.css.js",
+  "front_end/panels/settings/AISettingsTab.js",
   "front_end/panels/settings/FrameworkIgnoreListSettingsTab.js",
   "front_end/panels/settings/KeybindsSettingsTab.js",
   "front_end/panels/settings/SettingsScreen.js",
+  "front_end/panels/settings/aiSettingsTab.css.js",
   "front_end/panels/settings/components/SyncSection.js",
   "front_end/panels/settings/components/syncSection.css.js",
   "front_end/panels/settings/emulation/DevicesSettingsTab.js",
