--- a/front_end/panels/settings/BUILD.gn
+++ b/front_end/panels/settings/BUILD.gn
@@ -9,6 +9,7 @@ import("../visibility.gni")
 
 generate_css("css_files") {
   sources = [
+    "aiSettingsTab.css",
     "frameworkIgnoreListSettingsTab.css",
     "keybindsSettingsTab.css",
     "settingsScreen.css",
@@ -17,6 +18,7 @@ generate_css("css_files") {
 
 devtools_module("settings") {
   sources = [
+    "AISettingsTab.ts",
     "FrameworkIgnoreListSettingsTab.ts",
     "KeybindsSettingsTab.ts",
     "SettingsScreen.ts",
@@ -28,6 +30,7 @@ devtools_module("settings") {
     "../../core/i18n:bundle",
     "../../core/root:bundle",
     "../../ui/components/icon_button:bundle",
+    "../../ui/components/legacy_wrapper:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/utils:bundle",
     "../utils:bundle",
