[RPP] Add a request link icon next to the url
The icon is same as the ones we used in other panels.
It will only be added when the network request exists, and when you click it, you will be navigated to network panel with the network request activated.

Bug: 347190877
Change-Id: Id69602475a1f1650e792d98ff2985a39afc79116
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5756484
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -55,6 +55,7 @@ devtools_module("components") {
     "../../../ui/components/legacy_wrapper:bundle",
     "../../../ui/components/menus:bundle",
     "../../../ui/components/render_coordinator:bundle",
+    "../../../ui/components/request_link_icon:bundle",
     "../../../ui/legacy:bundle",
     "../../../ui/legacy/components/perf_ui:bundle",
     "../../../ui/lit-html:bundle",
