Add console insights setting to Chrome AI settings tab
Screenshot: https://i.imgur.com/SjCLmKy.png

Bug: 351743687, 350668580
Change-Id: I66be09bf8c2a37917f775824ad89bacfd0948876
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5750822
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -181,6 +181,7 @@ devtools_svg_sources = [
   "left-panel-close.svg",
   "left-panel-open.svg",
   "lightbulb-spark.svg",
+  "lightbulb.svg",
   "lighthouse_logo.svg",
   "list.svg",
   "location-on.svg",
@@ -198,6 +199,7 @@ devtools_svg_sources = [
   "person.svg",
   "play.svg",
   "plus.svg",
+  "policy.svg",
   "popup.svg",
   "preview_feature_video_thumbnail.svg",
   "profile.svg",
