--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -178,6 +178,7 @@ grd_files_release_sources = [
   "front_end/Images/left-panel-close.svg",
   "front_end/Images/left-panel-open.svg",
   "front_end/Images/lightbulb-spark.svg",
+  "front_end/Images/lightbulb.svg",
   "front_end/Images/lighthouse_logo.svg",
   "front_end/Images/list.svg",
   "front_end/Images/location-on.svg",
@@ -198,6 +199,7 @@ grd_files_release_sources = [
   "front_end/Images/person.svg",
   "front_end/Images/play.svg",
   "front_end/Images/plus.svg",
+  "front_end/Images/policy.svg",
   "front_end/Images/popoverArrows.png",
   "front_end/Images/popup.svg",
   "front_end/Images/preview_feature_video_thumbnail.svg",
