[RPP] Determine estimated LCP savings for RenderBlocking insight
Bug: 313905799
Change-Id: I76c495dd5541d5b925af681e2168f0c349b1a61c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5703499
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -8,6 +8,7 @@ import("../../visibility.gni")
 
 devtools_module("insights") {
   sources = [
+    "Common.ts",
     "CumulativeLayoutShift.ts",
     "DocumentLatency.ts",
     "InsightRunners.ts",
