--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1040,6 +1040,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/helpers/Timing.js",
   "front_end/models/trace/helpers/Trace.js",
   "front_end/models/trace/helpers/TreeHelpers.js",
+  "front_end/models/trace/insights/Common.js",
   "front_end/models/trace/insights/CumulativeLayoutShift.js",
   "front_end/models/trace/insights/DocumentLatency.js",
   "front_end/models/trace/insights/InsightRunners.js",
