RPP: Allow traces to be 'revealed' by the panel
This CL also removes Timeline panel as both a build- and runtime-
dependency of the Lighthouse panel.

Bug: 337909145
Change-Id: I3c065040bb316086c36974a02a3b3a6754bfb154
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5758048
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>

--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -83,6 +83,7 @@ devtools_module("sdk") {
     "StorageKeyManager.ts",
     "Target.ts",
     "TargetManager.ts",
+    "TraceObject.ts",
     "WebAuthnModel.ts",
   ]
 
@@ -169,6 +170,7 @@ ts_library("unittests") {
     "StorageKeyManager.test.ts",
     "Target.test.ts",
     "TargetManager.test.ts",
+    "TraceObject.test.ts",
   ]
 
   deps = [
