--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -851,6 +851,7 @@ grd_files_debug_sources = [
   "front_end/core/sdk/StorageKeyManager.js",
   "front_end/core/sdk/Target.js",
   "front_end/core/sdk/TargetManager.js",
+  "front_end/core/sdk/TraceObject.js",
   "front_end/core/sdk/WebAuthnModel.js",
   "front_end/entrypoints/formatter_worker/AcornTokenizer.js",
   "front_end/entrypoints/formatter_worker/CSSFormatter.js",
