Add console freestyler setting to Chrome AI settings tab
Screenshot: https://i.imgur.com/3e8Gq7H.png

Bug: 351743687, 350668580
Change-Id: Iecf582a5ba806436c123e437d81abe698cd3d78c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5750962
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -195,6 +195,7 @@ devtools_svg_sources = [
   "network-settings.svg",
   "open-externally.svg",
   "pause.svg",
+  "pen-spark.svg",
   "performance.svg",
   "person.svg",
   "play.svg",
