--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -195,6 +195,7 @@ grd_files_release_sources = [
   "front_end/Images/nodeIcon.avif",
   "front_end/Images/open-externally.svg",
   "front_end/Images/pause.svg",
+  "front_end/Images/pen-spark.svg",
   "front_end/Images/performance.svg",
   "front_end/Images/person.svg",
   "front_end/Images/play.svg",
