[ve] Track known jslog context values
This CL introduces a list of known jslog context values, an eslint rule
to update this list and a console error message when unknown context
values are being used.

Bug: 357571602
Change-Id: I5cb2b2e8788537022d11a3acc61fb37a23bcd38d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5756569
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/visual_logging/BUILD.gn
+++ b/front_end/ui/visual_logging/BUILD.gn
@@ -10,6 +10,7 @@ devtools_module("visual_logging") {
   sources = [
     "Debugging.ts",
     "DomState.ts",
+    "KnownContextValues.ts",
     "Loggable.ts",
     "LoggingConfig.ts",
     "LoggingDriver.ts",
