--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2373,6 +2373,7 @@ grd_files_debug_sources = [
   "front_end/ui/lit-html/static.js",
   "front_end/ui/visual_logging/Debugging.js",
   "front_end/ui/visual_logging/DomState.js",
+  "front_end/ui/visual_logging/KnownContextValues.js",
   "front_end/ui/visual_logging/Loggable.js",
   "front_end/ui/visual_logging/LoggingConfig.js",
   "front_end/ui/visual_logging/LoggingDriver.js",
