Use union merge algorithm for KnowContextValues.ts
This file is auto-generated by a lint-rule, so avoid merge conflicts if possible.

Bug: none
Change-Id: I9b38555f0d5fe14a3d7bb02d36eb08e76a149f0f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5766559
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 package-lock.json binary
+front_end/ui/visual_logging/KnownContextValues.ts merge=union
 # Automatically normalize line endings (to LF) for all text-based files.
 * text=auto eol=lf
