[RPP] Add EntriesLinkOverlay component
Only adding the component for now.

Bug: 339802345
Change-Id: I497472d53698f5080882c9da836b2302c08826cc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5768936
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/BUILD.gn
+++ b/front_end/panels/timeline/overlays/components/BUILD.gn
@@ -9,6 +9,7 @@ import("../../../../../third_party/typescript/typescript.gni")
 
 generate_css("css_files") {
   sources = [
+    "entriesLinkOverlay.css",
     "entryLabelOverlay.css",
     "timeRangeOverlay.css",
     "timespanBreakdownOverlay.css",
@@ -17,6 +18,7 @@ generate_css("css_files") {
 
 devtools_module("components") {
   sources = [
+    "EntriesLinkOverlay.ts",
     "EntryLabelOverlay.ts",
     "TimeRangeOverlay.ts",
     "TimespanBreakdownOverlay.ts",
