--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1783,9 +1783,11 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/extensions/ExtensionUI.js",
   "front_end/panels/timeline/historyToolbarButton.css.js",
   "front_end/panels/timeline/overlays/OverlaysImpl.js",
+  "front_end/panels/timeline/overlays/components/EntriesLinkOverlay.js",
   "front_end/panels/timeline/overlays/components/EntryLabelOverlay.js",
   "front_end/panels/timeline/overlays/components/TimeRangeOverlay.js",
   "front_end/panels/timeline/overlays/components/TimespanBreakdownOverlay.js",
+  "front_end/panels/timeline/overlays/components/entriesLinkOverlay.css.js",
   "front_end/panels/timeline/overlays/components/entryLabelOverlay.css.js",
   "front_end/panels/timeline/overlays/components/timeRangeOverlay.css.js",
   "front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css.js",
