Add unit tests for Chrome AI settings page
Bug: 351743687, 350668580
Change-Id: Ib3cce07d64d7b49de6c5ad8a190ef3e07f6dbcfc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5752527
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -183,6 +183,7 @@ group("unittests") {
     "panels/screencast:unittests",
     "panels/search:unittests",
     "panels/security:unittests",
+    "panels/settings:unittests",
     "panels/settings/components:unittests",
     "panels/settings/emulation/components:unittests",
     "panels/settings/emulation/utils:unittests",
