[Recorder] Support export to Puppeteer with Firefox
Fixed: 354675511
Change-Id: I6ed26ce4d992c157e9574bfc494bf6cf0133cc0f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5771512
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1586,6 +1586,7 @@ grd_files_debug_sources = [
   "front_end/panels/recorder/converters/JSONConverter.js",
   "front_end/panels/recorder/converters/LighthouseConverter.js",
   "front_end/panels/recorder/converters/PuppeteerConverter.js",
+  "front_end/panels/recorder/converters/PuppeteerFirefoxConverter.js",
   "front_end/panels/recorder/converters/PuppeteerReplayConverter.js",
   "front_end/panels/recorder/extensions/ExtensionManager.js",
   "front_end/panels/recorder/injected/Logger.js",
