--- a/front_end/panels/recorder/converters/BUILD.gn
+++ b/front_end/panels/recorder/converters/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("converters") {
     "JSONConverter.ts",
     "LighthouseConverter.ts",
     "PuppeteerConverter.ts",
+    "PuppeteerFirefoxConverter.ts",
     "PuppeteerReplayConverter.ts",
   ]
 
