--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -16,6 +16,7 @@ generate_css("css_files") {
 
 devtools_module("insights") {
   sources = [
+    "CLSCulprits.ts",
     "Helpers.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
