[elements] Autocomplete grid line and area names
When editing grid properties, autocomplete the appropriate line and area
labels.

Bug: none
Change-Id: Ie79831ed8dd4300458638b4d66a351f0ffe4db91
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5746533
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/test/e2e/elements/BUILD.gn
+++ b/test/e2e/elements/BUILD.gn
@@ -17,6 +17,7 @@ node_ts_library("elements") {
     "css-hints_test.ts",
     "element-breadcrumbs_test.ts",
     "elements-tree_test.ts",
+    "filter-matched-styles_test.ts",
     "flexbox-editor_test.ts",
     "grid-editor_test.ts",
     "layout-pane_test.ts",
