--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2068,7 +2068,7 @@ grd_files_debug_sources = [
   "front_end/ui/components/adorners/Adorner.js",
   "front_end/ui/components/adorners/adorner.css.js",
   "front_end/ui/components/buttons/Button.js",
-  "front_end/ui/components/buttons/button.css.js",
+  "front_end/ui/components/buttons/button.css.legacy.js",
   "front_end/ui/components/chrome_link/ChromeLink.js",
   "front_end/ui/components/chrome_link/chromeLink.css.js",
   "front_end/ui/components/code_highlighter/CodeHighlighter.js",
