--- a/front_end/ui/components/buttons/BUILD.gn
+++ b/front_end/ui/components/buttons/BUILD.gn
@@ -8,8 +8,10 @@ import("../../../../scripts/build/ninja/generate_css.gni")
 import("../../../../third_party/typescript/typescript.gni")
 import("../visibility.gni")
 
-generate_css("css_files") {
+generate_css("legacy_css_files") {
   sources = [ "button.css" ]
+
+  legacy = true
 }
 
 devtools_module("button") {
@@ -27,7 +29,7 @@ devtools_entrypoint("bundle") {
 
   deps = [
     ":button",
-    ":css_files",
+    ":legacy_css_files",
   ]
 
   visibility = default_components_visibility
