Migrate http/tests/devtools/unit/binary-resource-view.js to unit test
R=kimanh@chromium.org

Bug: 41481944
Change-Id: Icfb57f8a4b7778fd28b4482a46a38618d58f77d6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5783739
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/components/source_frame/BUILD.gn
+++ b/front_end/ui/legacy/components/source_frame/BUILD.gn
@@ -89,6 +89,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "BinaryResourceViewFactory.test.ts",
     "ResourceSourceFrame.test.ts",
     "SourceFrame.test.ts",
   ]
