Use Switch component instead of checkboxes for AI settings page
Screenshot: https://i.imgur.com/FOeod4S.png

Bug: b/350668580
Change-Id: I8a90132e1479e30f70f5253f4d09bf3a81848eb3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5776409
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -688,6 +688,7 @@ grd_files_release_sources = [
   "front_end/ui/components/srgb_overlay/srgb_overlay.js",
   "front_end/ui/components/suggestion_input/suggestion_input.js",
   "front_end/ui/components/survey_link/survey_link.js",
+  "front_end/ui/components/switch/switch.js",
   "front_end/ui/components/text_editor/text_editor.js",
   "front_end/ui/components/text_prompt/text_prompt.js",
   "front_end/ui/components/tree_outline/tree_outline.js",
@@ -2159,6 +2160,8 @@ grd_files_debug_sources = [
   "front_end/ui/components/suggestion_input/suggestionInput.css.js",
   "front_end/ui/components/survey_link/SurveyLink.js",
   "front_end/ui/components/survey_link/surveyLink.css.js",
+  "front_end/ui/components/switch/SwitchImpl.js",
+  "front_end/ui/components/switch/switch.css.js",
   "front_end/ui/components/text_editor/AutocompleteHistory.js",
   "front_end/ui/components/text_editor/ExecutionPositionHighlighter.js",
   "front_end/ui/components/text_editor/TextEditor.js",
