--- a/front_end/panels/settings/BUILD.gn
+++ b/front_end/panels/settings/BUILD.gn
@@ -32,6 +32,7 @@ devtools_module("settings") {
     "../../core/root:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/components/legacy_wrapper:bundle",
+    "../../ui/components/switch:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/utils:bundle",
     "../utils:bundle",
