--- a/front_end/ui/components/switch/BUILD.gn
+++ b/front_end/ui/components/switch/BUILD.gn
@@ -14,7 +14,10 @@ generate_css("css_files") {
 
 devtools_module("switch_impl") {
   sources = [ "SwitchImpl.ts" ]
-  deps = [ "../../../ui/lit-html:bundle" ]
+  deps = [
+    "../../../ui/lit-html:bundle",
+    "../../../ui/visual_logging:bundle",
+  ]
 }
 
 devtools_entrypoint("bundle") {
