[GM3Restyling] Use tune icon for Memory Panel
Screenshot: https://i.imgur.com/JDZfPLH.png
Bug: 319441690
Change-Id: I5ec3f432ec73edecb9785e10fb4115a6a4672ff0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5783825
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -249,6 +249,7 @@ devtools_svg_sources = [
   "triangle-left.svg",
   "triangle-right.svg",
   "triangle-up.svg",
+  "tune.svg",
   "undo.svg",
   "warning-filled.svg",
   "warning.svg",
