--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -253,6 +253,7 @@ grd_files_release_sources = [
   "front_end/Images/triangle-left.svg",
   "front_end/Images/triangle-right.svg",
   "front_end/Images/triangle-up.svg",
+  "front_end/Images/tune.svg",
   "front_end/Images/undo.svg",
   "front_end/Images/warning-filled.svg",
   "front_end/Images/warning.svg",
