Add an expandable table with new pseudo classes specific to the selected element.
The new supported pseudo classes are: enable, disable, valid, invalid, user-valid, user-invalid, required, optional, read-only, read-write, in-range, out-of-range, checked, indeterminate, placeholder-shown, autofill.
Also changed the old table to a `grid` container.

Bug:40280012
Change-Id: I0802a1f7660aee28b3878f067ccfe15497b3cd0d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5692026
Commit-Queue: Ionuț Marius Voicilă <ionutvoicila@google.com>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -153,6 +153,7 @@ ts_library("unittests") {
     "CSSRuleValidator.test.ts",
     "ClassesPaneWidget.test.ts",
     "DOMLinkifier.test.ts",
+    "ElementStatePaneWidget.test.ts",
     "ElementsPanel.test.ts",
     "ElementsTreeElementHighlighter.test.ts",
     "InspectElementModeController.test.ts",
