[RPP] Introduce ServerTimingsHandler
The handler extracts server timing metrics from network requests using
the `ServerTiming` util in DevTools. From these metrics, synthetic trace
events are created whose timestamps are set by using the non-standard
`start` param of server metrics and estimating the offset between the
client and server clocks (by comparing request sent and received vs
reponse received and sent timestamps). See more at go/cpq:server-timings-in-rpp

Bug: 340811171
Change-Id: I6cf9726a499b0b2ddb268666687f0ed0c997e3c7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5782924
Commit-Queue: Andres Olivares <andoli@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -32,6 +32,7 @@ devtools_module("handlers") {
     "SamplesHandler.ts",
     "ScreenshotsHandler.ts",
     "SelectorStatsHandler.ts",
+    "ServerTimingsHandler.ts",
     "Threads.ts",
     "UserInteractionsHandler.ts",
     "UserTimingsHandler.ts",
@@ -86,6 +87,7 @@ ts_library("unittests") {
     "SamplesHandler.test.ts",
     "ScreenshotsHandler.test.ts",
     "SelectorStatsHandler.test.ts",
+    "ServerTimingsHandler.test.ts",
     "Threads.test.ts",
     "UserInteractionsHandler.test.ts",
     "UserTimingsHandler.test.ts",
