--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1033,6 +1033,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/handlers/SamplesHandler.js",
   "front_end/models/trace/handlers/ScreenshotsHandler.js",
   "front_end/models/trace/handlers/SelectorStatsHandler.js",
+  "front_end/models/trace/handlers/ServerTimingsHandler.js",
   "front_end/models/trace/handlers/Threads.js",
   "front_end/models/trace/handlers/UserInteractionsHandler.js",
   "front_end/models/trace/handlers/UserTimingsHandler.js",
