[RPP] Introduce ServerTimingsTrackAppender
It appends the data of the ServerTimingsHandler into tracks created
based on the origin of the corresponding network request.

more details at: go/cpq:server-timings-in-rpp

Bug: 340811171
Change-Id: If0b832c4bacf1557040722124e84786f2590e5ce
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5788581
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -74,6 +74,7 @@ devtools_module("timeline") {
     "ModificationsManager.ts",
     "NetworkTrackAppender.ts",
     "SaveFileFormatter.ts",
+    "ServerTimingsTrackAppender.ts",
     "SourceMapsResolver.ts",
     "TargetForEvent.ts",
     "ThreadAppender.ts",
