--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1728,6 +1728,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/ModificationsManager.js",
   "front_end/panels/timeline/NetworkTrackAppender.js",
   "front_end/panels/timeline/SaveFileFormatter.js",
+  "front_end/panels/timeline/ServerTimingsTrackAppender.js",
   "front_end/panels/timeline/SourceMapsResolver.js",
   "front_end/panels/timeline/TargetForEvent.js",
   "front_end/panels/timeline/ThreadAppender.js",
