[RPP Observations] Enable experiment by default
Bug: 334926021
Change-Id: I5260844ac3115a2c1ea5d119dac10df792a9b1eb
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5788983
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/live-metrics/BUILD.gn
+++ b/front_end/models/live-metrics/BUILD.gn
@@ -10,6 +10,7 @@ devtools_module("live-metrics") {
 
   deps = [
     "../../core/common:bundle",
+    "../../core/host:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
     "./web-vitals-injected:web-vitals-injected",
