[scripts] Provide a single `npm run lint` command.
This unifies the current set of two dedicated scripts for running ESLint
and stylelint into a single script, with a single npm run-script
command. We need to migrate the Infra and devtools-internal before we
can fully remove the old scripts.

Bug: 360832181
Change-Id: Ifb98d882d951fb3e1c9d7ff8aae22c8d844ced55
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5796886
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "bake-strings": "npm run collect-strings && vpython3 third_party/node/node.py --output third_party/i18n/bake-strings.js front_end/core/i18n/locales",
     "build": "autoninja -C out/Default",
     "build-release": "autoninja -C out/Release",
-    "check": "npm run check-lint && npm run check-loc",
     "check-external-links": "vpython3 third_party/node/node.py --output scripts/check_external_links.js",
     "check-lint": "vpython3 third_party/node/node.py --output scripts/test/run_lint_check_js.mjs && vpython3 third_party/node/node.py --output scripts/test/run_lint_check_css.js",
     "check-lint-js": "vpython3 third_party/node/node.py --output scripts/test/run_lint_check_js.mjs",
@@ -35,6 +34,7 @@
     "generate-dark-mode-styles": "vpython3 third_party/node/node.py --output scripts/dark_mode/generate_dark_theme_sheet.js",
     "generate-protocol-resources": "scripts/deps/generate_protocol_resources.py && git cl format --js",
     "install-deps": "scripts/deps/manage_node_deps.py",
+    "lint": "vpython3 third_party/node/node.py --output scripts/test/run_lint_check.js",
     "prebuild": "gn gen out/Default",
     "rdb": "rdb stream -new -realm chrome:public --",
     "setup-dtrun": "cd scripts/devtools_run && npm link",
