[console] Use Acorn instead of function constructor in JavaScriptREPL
With strict CSP (no usafe-eval) the function constructor will always throw

Bug: 360830630
Change-Id: I5e99d660d8d9e50520f95a46355ca4b9b1350693
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5796885
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/front_end/ui/legacy/components/object_ui/BUILD.gn
+++ b/front_end/ui/legacy/components/object_ui/BUILD.gn
@@ -37,6 +37,8 @@ devtools_module("object_ui") {
     "../../../../models/formatter:bundle",
     "../../../../models/source_map_scopes:bundle",
     "../../../../models/text_utils:bundle",
+    "../../../../third_party/acorn:acorn",
+    "../../../../third_party/acorn:bundle",
     "../../../../ui/components/icon_button:bundle",
     "../../../../ui/components/text_editor:bundle",
     "../../../../ui/legacy:bundle",
