Add Detached DOM Elements Profiling Type to Memory Panel to get retained JavaScript objects on the page.
Design: https://docs.google.com/document/d/1b4jSkDB7T-3G16O_9OVN1XG-ET7UD5JpFnn0bxm3PTk/edit

Creates a new Detached Elements view that uses the new getDetachedDomNodes CDP command to obtain trees of detached objects that are retained by a JavaScript reference. These trees will be displayed in the view where the specifically retained objects in the detached tree will be marked.

Created this CL from https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5719568 as Giovanni completed his internship at Microsoft


Bug: 350519222
Change-Id: Ib721f4c56d6739af67520d21d99bd85d59b185ee
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5791752
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Jayson Chen <jaysonchen@microsoft.com>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1529,6 +1529,8 @@ grd_files_debug_sources = [
   "front_end/panels/performance_monitor/performanceMonitor.css.js",
   "front_end/panels/profiler/BottomUpProfileDataGrid.js",
   "front_end/panels/profiler/ChildrenProvider.js",
+  "front_end/panels/profiler/HeapDetachedElementsDataGrid.js",
+  "front_end/panels/profiler/HeapDetachedElementsView.js",
   "front_end/panels/profiler/HeapProfileView.js",
   "front_end/panels/profiler/HeapProfilerPanel.js",
   "front_end/panels/profiler/HeapSnapshotDataGrids.js",
