[RPP] Initial pass for Viewport insight component
This renders the Viewport insight, including using a new
component to display a linkified Node given a backend node id.

Bug: 351757418
Change-Id: Ief4d89c1c640997ee594ebbefa2ab5a5ea3872ca
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5782665
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -20,7 +20,9 @@ devtools_module("insights") {
     "Helpers.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
+    "NodeLink.ts",
     "SidebarInsight.ts",
+    "Viewport.ts",
     "types.ts",
   ]
 
