--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1778,7 +1778,9 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/Helpers.js",
   "front_end/panels/timeline/components/insights/LCPDiscovery.js",
   "front_end/panels/timeline/components/insights/LCPPhases.js",
+  "front_end/panels/timeline/components/insights/NodeLink.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
+  "front_end/panels/timeline/components/insights/Viewport.js",
   "front_end/panels/timeline/components/insights/lcpDiscovery.css.js",
   "front_end/panels/timeline/components/insights/sidebarInsight.css.js",
   "front_end/panels/timeline/components/insights/types.js",
