[Freestyler] Integration with the changes panel
Bug: 360776969
Change-Id: I265df139a7a300b7efac6264d263e948c68c7bdf
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5799943
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -18,6 +18,8 @@ generate_css("css_files") {
 
 devtools_module("freestyler") {
   sources = [
+    "ChangeManager.ts",
+    "ExtensionScope.ts",
     "FreestylerAgent.ts",
     "FreestylerEvaluateAction.ts",
     "FreestylerPanel.ts",
@@ -64,6 +66,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "ChangeManager.test.ts",
     "FreestylerAgent.test.ts",
     "FreestylerEvaluateAction.test.ts",
     "FreestylerPanel.test.ts",
