--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1365,6 +1365,8 @@ grd_files_debug_sources = [
   "front_end/panels/explain/components/ConsoleInsight.js",
   "front_end/panels/explain/components/consoleInsight.css.js",
   "front_end/panels/explain/components/consoleInsightSourcesList.css.js",
+  "front_end/panels/freestyler/ChangeManager.js",
+  "front_end/panels/freestyler/ExtensionScope.js",
   "front_end/panels/freestyler/FreestylerAgent.js",
   "front_end/panels/freestyler/FreestylerEvaluateAction.js",
   "front_end/panels/freestyler/FreestylerPanel.js",
