[RPP Observations] Separate metric card component into new file
This is just a helpful refactor to reduce file sizes as we start adding
more environment recomendations. Any shared code between the two files
was moved to Util.ts.

The test cases should be split up, but I'm leaving that for a follow-up
to ensure that just moving code around doesn't break anything.

Bug: 313906438
Change-Id: Icbe6597154b43d31acef4ec286d50e9b9679e475
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5803904
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1765,6 +1765,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/FieldSettingsDialog.js",
   "front_end/panels/timeline/components/InteractionBreakdown.js",
   "front_end/panels/timeline/components/LiveMetricsView.js",
+  "front_end/panels/timeline/components/MetricCard.js",
   "front_end/panels/timeline/components/MetricCompareStrings.js",
   "front_end/panels/timeline/components/NetworkRequestDetails.js",
   "front_end/panels/timeline/components/NetworkRequestTooltip.js",
@@ -1788,6 +1789,8 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
+  "front_end/panels/timeline/components/metricCard.css.js",
+  "front_end/panels/timeline/components/metricValueStyles.css.js",
   "front_end/panels/timeline/components/networkRequestDetails.css.js",
   "front_end/panels/timeline/components/networkRequestTooltip.css.js",
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
