--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -13,6 +13,8 @@ generate_css("css_files") {
     "fieldSettingsDialog.css",
     "interactionBreakdown.css",
     "liveMetricsView.css",
+    "metricCard.css",
+    "metricValueStyles.css",
     "networkRequestDetails.css",
     "networkRequestTooltip.css",
     "sidebarAnnotationsTab.css",
@@ -30,6 +32,7 @@ devtools_module("components") {
     "FieldSettingsDialog.ts",
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
+    "MetricCard.ts",
     "MetricCompareStrings.ts",
     "NetworkRequestDetails.ts",
     "NetworkRequestTooltip.ts",
