--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -31,9 +31,11 @@ devtools_module("insights") {
     "../../../../core/platform:bundle",
     "../../../../models/trace:bundle",
     "../../../../services/trace_bounds:bundle",
+    "../../../../third_party/marked:bundle",
     "../../../../ui/components/buttons:bundle",
     "../../../../ui/components/helpers:bundle",
     "../../../../ui/components/icon_button:bundle",
+    "../../../../ui/components/markdown_view:bundle",
     "../../../../ui/lit-html:bundle",
     "../../overlays:bundle",
   ]
