--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1782,6 +1782,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/LCPDiscovery.js",
   "front_end/panels/timeline/components/insights/LCPPhases.js",
   "front_end/panels/timeline/components/insights/NodeLink.js",
+  "front_end/panels/timeline/components/insights/RenderBlocking.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
   "front_end/panels/timeline/components/insights/Viewport.js",
   "front_end/panels/timeline/components/insights/lcpDiscovery.css.js",
