[RPP Observations] Move tests related to the metric card component
Follow up to: https://crrev.com/c/5803904

Separate tests related to metric card into a new test file.

Bug: 313906438
Change-Id: I6a784eb730344d4fe50e53d9665ae458d2d5c49b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5803905
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -96,6 +96,7 @@ ts_library("unittests") {
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LiveMetricsView.test.ts",
+    "MetricCard.test.ts",
     "NetworkRequestDetails.test.ts",
     "NetworkThrottlingSelector.test.ts",
     "SidebarAnnotationsTab.test.ts",
