--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -657,6 +657,7 @@ grd_files_release_sources = [
   "front_end/third_party/marked/marked.js",
   "front_end/third_party/puppeteer-replay/puppeteer-replay.js",
   "front_end/third_party/puppeteer/puppeteer.js",
+  "front_end/third_party/third-party-web/third-party-web.js",
   "front_end/third_party/wasmparser/wasmparser.js",
   "front_end/third_party/web-vitals/web-vitals.js",
   "front_end/ui/components/adorners/adorners.js",
@@ -2032,6 +2033,7 @@ grd_files_debug_sources = [
   "front_end/third_party/puppeteer/package/lib/esm/third_party/mitt/mitt.js",
   "front_end/third_party/puppeteer/package/lib/esm/third_party/parsel-js/parsel-js.js",
   "front_end/third_party/puppeteer/package/lib/esm/third_party/rxjs/rxjs.js",
+  "front_end/third_party/third-party-web/lib/nostats-subset.js",
   "front_end/third_party/wasmparser/package/dist/esm/WasmDis.js",
   "front_end/third_party/wasmparser/package/dist/esm/WasmParser.js",
   "front_end/third_party/web-vitals/package/dist/modules/attribution/deprecated.js",
