--- a/front_end/entrypoints/lighthouse_worker/BUILD.gn
+++ b/front_end/entrypoints/lighthouse_worker/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("lighthouse_worker") {
     "../../core/sdk:bundle",
     "../../services/puppeteer:bundle",
     "../../third_party/lighthouse",
+    "../../third_party/third-party-web:bundle",
   ]
 }
 
