--- a/.eslintignore
+++ b/.eslintignore
@@ -3,8 +3,14 @@ front_end/diff/diff_match_patch.jD
 front_end/models/javascript_metadata/NativeFunctions.js
 front_end/models/javascript_metadata/DOMPinnedProperties.ts
 
-// All of the scripts in this folder are auto-generated so don't lint them.
-front_end/generated/
+// All of these scripts are auto-generated so don't lint them.
+front_end/generated/ARIAProperties.js
+front_end/generated/Deprecation.ts
+front_end/generated/InspectorBackendCommands.js
+front_end/generated/protocol-mapping.d.ts
+front_end/generated/protocol-proxy-api.d.ts
+front_end/generated/protocol.ts
+
 
 // Any third_party addition has its source code checked out into
 // third_party/X/package, so we ignore that code as it's not code we author or
