--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ config.gypi
 npm-debug.log
 /scripts/javascript_natives/node_modules
 /scripts/protocol_typescript/*.js
+/scripts/freestyler/data
 
 /build
 /buildtools
