[RPP] Document latency sidebar insight
This covers a basic card: https://screenshot.googleplex.com/AZMtGLmUoACx4Qp. TODOs include surfacing the possible savings in failure cases, and an overlay.

Bug: 352244434
Change-Id: I45860885ac42da9ba3347ffbb3fe83cd94ce8c26
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5824828
Auto-Submit: Jasmine Yan <jasmineyan@google.com>
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Jasmine Yan <jasmineyan@google.com>

--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -17,6 +17,7 @@ generate_css("css_files") {
 devtools_module("insights") {
   sources = [
     "CLSCulprits.ts",
+    "DocumentLatency.ts",
     "Helpers.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
