[LiveMetrics] Make injected bundle visible to web tests
This resolves the unexpected token issues we were seeing however
there are still some unexpected crashes in web tests when live metrics
are enabled.

Bug: 360064852
Change-Id: I716ed909332edf7faa69ed218d9cad9928d4d11f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5825623
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/models/live-metrics/web-vitals-injected/BUILD.gn
+++ b/front_end/models/live-metrics/web-vitals-injected/BUILD.gn
@@ -53,6 +53,7 @@ node_action("bundled_library") {
   }
 
   outputs = [ _output_file_location ]
+  data = outputs
   metadata = {
     grd_files = [ _output_file_location ]
   }
